--- a/index.html
+++ b/index.html
@@ -1,31 +1,9 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
     <head>
         <script src="myscripts.js"></script>
-        <style type="text/css">
-        #wrapper { 
-            background-color: bisque;
-            width: 70%;
-            margin-left: auto;
-            margin-right: auto;
-            padding: 2em;
-        }
-        #result {
-            margin-top: 20px;
-            font-size: 1.2em;
-            padding: 1em;
-            background-color: #f0f0f0;
-        }
-        #goAgainButton {
-            display: none; 
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: lightblue;
-            border: none;
-            cursor: pointer;
-            font-size: 1em;
-        }
-        </style>
+        <!-- Link to the external CSS file -->
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div id="wrapper">
