--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <script src="myscripts.js"></script>
         <!-- Link to the external CSS file -->
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet"  href="style.css">
     </head>
     <body>
         <div id="wrapper">
